branches/0.3/objects/ProjectProfile__c.object
<CustomObject>
    <description>ProjectProfile</description>
    <fields>
        <fullName>CreateProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CreateProjectTasks</description>
        <label>CreateProjectTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ManageProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ManageProjectTasks</description>
        <label>ManageProjectTasks</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Profile</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>